@@ -1,8 +1,12 @@
 [buildout]
 develop = .
-parts = test
+parts = test app
 package = gocept.jslint
 
 [test]
 recipe = zc.recipe.testrunner
 eggs = ${buildout:package} [test]
+
+[app]
+recipe = zc.recipe.egg:scripts
+eggs = ${buildout:package}
